--- a/shufl-web/src/app/components/shared/user/user-icon/user-icon.component.html
+++ b/shufl-web/src/app/components/shared/user/user-icon/user-icon.component.html
@@ -1,6 +1,6 @@
 <div class="user-icon" [ngClass]="{'enabled': enabled}">
     <div class="user-icon-image-container">
-        <img src="https://i.scdn.co/image/{{ user.userImages[0].uri }}" *ngIf="user.userImages != null && user.userImages.length > 0">
+        <img src="{{ user.userImages[0].uri }}" *ngIf="user.userImages != null && user.userImages.length > 0">
         <img class="user-icon" src="assets/img/blank-user.png" *ngIf="user.userImages == null || user.userImages.length === 0">
     </div>
 
