--- a/shufl-web/src/app/components/user/account/account.component.html
+++ b/shufl-web/src/app/components/user/account/account.component.html
@@ -2,7 +2,7 @@
     <div class="card">
         <div class="user-data-container" *ngIf="user != null">
             <div class="user-icon-container">
-                <img class="user-icon" src="https://i.scdn.co/image/{{ user.userImages[0].uri }}" *ngIf="user.userImages != null && user.userImages.length > 0">
+                <img class="user-icon" src="{{ user.userImages[0].uri }}" *ngIf="user.userImages != null && user.userImages.length > 0">
                 <img class="user-icon" src="assets/img/blank-user.png" *ngIf="user.userImages == null || user.userImages.length === 0">
             </div>
     
