--- a/shufl-web/src/app/components/group/group-playlist-list/group-playlist/group-playlist.component.scss
+++ b/shufl-web/src/app/components/group/group-playlist-list/group-playlist/group-playlist.component.scss
@@ -43,12 +43,6 @@ $group-playlist-data-container-height: 185px;
 
             font-size: 1.2em;
         }
-
-        .random-icon {
-            width: 25px;
-
-            padding: $date-header-padding-top 0 0 $date-header-padding-left;
-        }
     }
 
     .group-playlist-data-container {
@@ -104,6 +98,19 @@ $group-playlist-data-container-height: 185px;
             .playlist-container,
             .rating-container {
                 width: 50%;
+            }
+        }
+    }
+}
+
+@media (min-width: 1920px) {
+    .group-playlist-container {
+        .group-playlist-data-container {
+            .playlist-container {
+                .playlist-icon {
+                    width: 150px;
+                    height: 150px;
+                }
             }
         }
     }
