--- a/shufl-web/src/app/components/group/group.component.scss
+++ b/shufl-web/src/app/components/group/group.component.scss
@@ -118,7 +118,7 @@
                 -moz-transition: left 0.25s ease-in-out;
                 transition: left 0.25s ease-in-out;
 
-                &.group-suggestion-list {
+                &.group-album-list {
                     left: -100%;
 
                     &.active {
