--- a/shufl-web/src/app/components/shared/group/dialogs/group-album-rate/group-album-rate.component.scss
+++ b/shufl-web/src/app/components/shared/group/dialogs/group-album-rate/group-album-rate.component.scss
@@ -1,4 +1,4 @@
-.group-suggestion-rate-modal {
+.group-album-rate-modal {
     input::-webkit-outer-spin-button,
     input::-webkit-inner-spin-button {
         margin: 0;
