--- a/shufl-web/src/app/components/shared/group/dialogs/group-album-rate/group-album-rate.component.html
+++ b/shufl-web/src/app/components/shared/group/dialogs/group-album-rate/group-album-rate.component.html
@@ -1,7 +1,7 @@
-<div class="group-suggestion-rate-modal">
-    <form [formGroup]="rateGroupSuggestionForm">
+<div class="group-album-rate-modal">
+    <form [formGroup]="rateGroupAlbumForm">
         <div class="form-group" 
-            [ngClass]="{'active': overallRatingActive, 'populated': overallRatingPopulated, 'has-error': (!rateGroupSuggestionForm.controls['overallRating'].valid && rateGroupSuggestionForm.controls['overallRating'].touched)}">
+            [ngClass]="{'active': overallRatingActive, 'populated': overallRatingPopulated, 'has-error': (!rateGroupAlbumForm.controls['overallRating'].valid && rateGroupAlbumForm.controls['overallRating'].touched)}">
             <div class="input-container">
                 <label for="overallRating">Overall</label>
                 <input type="number" class="form-control" formControlName="overallRating"
@@ -10,16 +10,16 @@
                     (keypress)="validateRating($event)"
                     pattern="\d+(\.\d{1})?">
             </div>
-            <small class="warning-label" [ngClass]="{'visible': (!rateGroupSuggestionForm.controls['overallRating'].valid && rateGroupSuggestionForm.controls['overallRating'].touched)}">
+            <small class="warning-label" [ngClass]="{'visible': (!rateGroupAlbumForm.controls['overallRating'].valid && rateGroupAlbumForm.controls['overallRating'].touched)}">
                 {{ 
-                    rateGroupSuggestionForm.controls['overallRating'].value?.length === 0 || rateGroupSuggestionForm.controls['overallRating'].value == null ? 'Rating cannot be blank' : 'Rating cannot be greater than 10' }}
+                    rateGroupAlbumForm.controls['overallRating'].value?.length === 0 || rateGroupAlbumForm.controls['overallRating'].value == null ? 'Rating cannot be blank' : 'Rating cannot be greater than 10' }}
             </small>
         </div>
         
         <div class="secondary-form-groups-container">
             <div class="small-form-group-container">
                 <div class="form-group" 
-                    [ngClass]="{'active': lyricsRatingActive, 'populated': lyricsRatingPopulated, 'has-error': (!rateGroupSuggestionForm.controls['lyricsRating'].valid && rateGroupSuggestionForm.controls['lyricsRating'].touched)}">
+                    [ngClass]="{'active': lyricsRatingActive, 'populated': lyricsRatingPopulated, 'has-error': (!rateGroupAlbumForm.controls['lyricsRating'].valid && rateGroupAlbumForm.controls['lyricsRating'].touched)}">
                     <div class="input-container">
                         <label for="lyricsRating">Lyrics</label>
                         <input type="number" class="form-control" formControlName="lyricsRating"
@@ -31,7 +31,7 @@
                 </div>
                 
                 <div class="form-group" 
-                    [ngClass]="{'active': vocalsRatingActive, 'populated': vocalsRatingPopulated, 'has-error': (!rateGroupSuggestionForm.controls['vocalsRating'].valid && rateGroupSuggestionForm.controls['vocalsRating'].touched)}">
+                    [ngClass]="{'active': vocalsRatingActive, 'populated': vocalsRatingPopulated, 'has-error': (!rateGroupAlbumForm.controls['vocalsRating'].valid && rateGroupAlbumForm.controls['vocalsRating'].touched)}">
                     <div class="input-container">
                         <label for="vocalsRating">Vocals</label>
                         <input type="number" class="form-control" formControlName="vocalsRating"
@@ -45,7 +45,7 @@
             
             <div class="large-form-group-container">
                 <div class="form-group" 
-                    [ngClass]="{'active': instrumentalsRatingActive, 'populated': instrumentalsRatingPopulated, 'has-error': (!rateGroupSuggestionForm.controls['instrumentalsRating'].valid && rateGroupSuggestionForm.controls['instrumentalsRating'].touched)}">
+                    [ngClass]="{'active': instrumentalsRatingActive, 'populated': instrumentalsRatingPopulated, 'has-error': (!rateGroupAlbumForm.controls['instrumentalsRating'].valid && rateGroupAlbumForm.controls['instrumentalsRating'].touched)}">
                     <div class="input-container">
                         <label for="instrumentalsRating">Instrumentals</label>
                         <input type="number" class="form-control" formControlName="instrumentalsRating"
@@ -57,7 +57,7 @@
                 </div>
                 
                 <div class="form-group" 
-                    [ngClass]="{'active': structureRatingActive, 'populated': structureRatingPopulated, 'has-error': (!rateGroupSuggestionForm.controls['structureRating'].valid && rateGroupSuggestionForm.controls['structureRating'].touched)}">
+                    [ngClass]="{'active': structureRatingActive, 'populated': structureRatingPopulated, 'has-error': (!rateGroupAlbumForm.controls['structureRating'].valid && rateGroupAlbumForm.controls['structureRating'].touched)}">
                     <div class="input-container">
                         <label for="structureRating">Structure</label>
                         <input type="number" class="form-control" formControlName="structureRating"
@@ -71,7 +71,7 @@
         </div>
                 
         <div class="form-group populated" 
-            [ngClass]="{'active': commentActive, 'has-error': (!rateGroupSuggestionForm.controls['comment'].valid && rateGroupSuggestionForm.controls['comment'].touched)}">
+            [ngClass]="{'active': commentActive, 'has-error': (!rateGroupAlbumForm.controls['comment'].valid && rateGroupAlbumForm.controls['comment'].touched)}">
             <div class="input-container comment">
                 <label for="comment">Comment</label>
                 <textarea class="form-control" formControlName="comment" [maxLength]="1500"
@@ -80,7 +80,7 @@
             </div>
         </div>
 
-        <app-loading-button [buttonText]="'Rate'" [isLoading]="isLoading" [isDisabled]="!rateGroupSuggestionForm.valid" (click)="rateGroupSuggestionAsync(rateGroupSuggestionForm.value)"></app-loading-button>
+        <app-loading-button [buttonText]="'Rate'" [isLoading]="isLoading" [isDisabled]="!rateGroupAlbumForm.valid" (click)="rateGroupAlbumAsync(rateGroupAlbumForm.value)"></app-loading-button>
     </form>
     <p class="form-error" [ngClass]="{'visible': formErrorMessageVisible}">{{ formErrorMessage }}</p>
 </div>
