Updated AddToGroup element

--- a/shufl-web/src/app/components/shared/group/dialogs/add-album-to-group/add-album-to-group.component.html
+++ b/shufl-web/src/app/components/shared/group/dialogs/add-album-to-group/add-album-to-group.component.html
@@ -1,4 +1,4 @@
-<div class="add-to-group-modal">
+<div class="add-album-to-group-modal">
     <p>Add this album to a group {{ spotifyUsername != null ? 'or your Spotify queue' : '' }}</p>
 
     <div class="queue-button-container" *ngIf="spotifyUsername != null">
