--- a/shufl-web/src/app/components/group/group-album-details/group-album-details.component.html
+++ b/shufl-web/src/app/components/group/group-album-details/group-album-details.component.html
@@ -3,7 +3,7 @@
         <app-card-nav-bar [queueVisible]="spotifyUsername != null" (queueClicked)="queueAlbumAsync()"></app-card-nav-bar>
         <div class="group-album-info-container" *ngIf="!isLoading && album != null">
             <div class="album-container">
-                <app-album-info [album]="album" [linkDisabled]="false"></app-album-info>
+                <app-album-info [album]="album" [relatedGroupAlbum]="groupAlbum.relatedGroupAlbum" [linkDisabled]="false"></app-album-info>
             </div>
 
             <div class="overall-rating-container">
